Make sure popovers of the project sidebars are not hidden by other elements
The issue is particularly visible on the planning view of the Agile
Dashboard.

When removing the specific implementation of the FP and BP project
sidebars I thought it was a whole new world and we did not need the
z-index hacks, I was wrong.

Part of story #24227: have private oauth2 endpoints for Mediawiki

--- a/src/themes/FlamingParrot/css/utils/_sidebar.scss
+++ b/src/themes/FlamingParrot/css/utils/_sidebar.scss
@@ -24,6 +24,7 @@ tuleap-project-sidebar {
     --tuleap-project-sidebar-icon-font-family-brands: "Font Awesome 5 Brands";
 
     position: fixed;
+    z-index: 1000;
     top: var(--platform-banner-offset-height, 0);
     height: calc(100vh - var(--platform-banner-offset-height, 0px));
 }
